0.6.3 - currently working on
- [#3443] Fix: getSubpart('foo') fails if there is text after the marker in the template
- [#3442] Fix: Documentation wrong about getPrefixedMarkers
- [#3412] Fix: db::retrieveColumnsForTable and ::getTcaForTable need to check for the existence of the table
- [#3413] Fix: Some functions in oelib_db are missing the "static" keyword
- [#3388] Fix: Autoloader does not load XCLASS
- [#3370] Fix: Models should be marked as dead on __destruct
- [#3384] Fix: Add XCLASS stuff for the PEAR and emogrifier classes
- [#3335] Fix: The e-mail function tests need to take forceCharset into account

0.6.2 - released 2009-08-15
- [#3338] Fix: E-Mails still contain CRLF
- [#3281] Fix: Free memory more agressively
- [#3340] Change: Move the creation of the headers and the body out of the loop in abstractMailer::send
- [#3328] Fix: Ghost acquired via getNewGhost must not be loaded
- [#3317] Fix: Check for object comparisons / recursive nesting
- [#3320] Fix: Unbreak GMX by changing the default encoding for e-mails from base64 back to quoted-printable
- [#3319] Change: Use only LF in the e-mail body
- [#3250] Change: Throw an exception when trying to save a model that has been created using getNewGhost or getLoadedTestingModel
- [#920] Fix: Umlauts in sender names are broken
- [#3226] Change: Add a test for getTcaForTable
- [#3186] Fix: The translator overrides localized keys
- [#3176] Fix: Locallang strings cannot be overwritten using TS setup
- [#3165] Fix: Umlauts not encoded correctly in the e-mail subject

0.6.1 - released 2009-07-01
- [#2988] Fix: Skip the ZipArchive tests if no ZipArchive is available
- [#3136] Change: Remove srand() call from Mail_mime class
- [#3135] Change: Use $_SERVER['REQUEST_TIME'] in Mail_mime class
- [#3056] Fix: E-mails have double line breaks
- [#3080] Feature: Add an object factory
- [#3068] Fix: Value of $functionName not quoted in the data mapper