@@ -1,4 +1,5 @@
 0.6.3 - currently working on
+- [#3444] Fix: A model cannot have a relation to itself
 - [#3443] Fix: getSubpart('foo') fails if there is text after the marker in the template
 - [#3442] Fix: Documentation wrong about getPrefixedMarkers
 - [#3412] Fix: db::retrieveColumnsForTable and ::getTcaForTable need to check for the existence of the table
